# mischess

./: CMakeLists.txt
.github/workflows/: macos.yml  release.yml
src/: board.c  fen.c  game.c  main.c
src/include/: board.h  fen.h  game.h  logger.h
